--- a/src/views/edit.hbs
+++ b/src/views/edit.hbs
@@ -24,6 +24,8 @@
       >{{task.description}}</textarea>
     </div>
 
+    {{task.sexo}}
+
     {{#ifEquals task.sexo "Hombre"}}
       <div class="form-check">
         <input class="form-check-input" type="radio" name="sexo" value="Hombre" checked />
